folders appearance on mobile fixes

--- a/src/components/left/LeftColumn.scss
+++ b/src/components/left/LeftColumn.scss
@@ -22,7 +22,7 @@
     white-space: nowrap;
   }
 
-  .SearchInput {
+  .folders-vertical-menu-not-open & .SearchInput {
     margin-left: 0.625rem;
     max-width: calc(100% - 3.25rem);
 
